Correct wrong color value

--- a/components/button/theme.css
+++ b/components/button/theme.css
@@ -468,7 +468,7 @@
 
     &:not(.is-disabled) {
       &:hover {
-        background-color: var(--color-teal-lightest);
+        background-color: var(--color-teal);
       }
 
       &:focus {
